2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* configure.ac: Define the Automake conditional CROSS_COMPILING.
	* doc/Makefile.am (poke-settings.texi): Rule to use when
	cross-compiling.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am (poke.1): Revert last change.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* man/Makefile.am (poke.1): Add -q to poke invocation.
	* doc/Makefile.am (poke-settings.texi): Likewise.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.c (pkl_call_node_handlers): Do not continue
	applying handlers to rewritten nodes, unless the rewritten node is
	explicitly restarted by the phase handler that created it.

2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>

	* libpoke/pkl-pass.h: NOte that changing PKL_PASS_NODE is
	possible, but only in post-order handlers.
	* libpoke/pkl-pass.c (pkl_do_pass_1): Add assertion to make sure
	pre-order handlers do not replace the node being processed.

2022-01-31  Alfred M. Szmidt  <ams@gnu.org>

	* doc/gen-pvm-insns.sh: Try not to use hard coded location for
	bash.
	* doc/Makefile.am (pvm-insns.texi): Don't create file if the
	command to create it failed.
	(poke.text): Remove redundant mv/rm.

2022-01-30  Bruno Haible  <bruno@clisp.org>

	doc: Don't leave a broken .texi file around.
	* doc/Makefile.am (poke-settings.texi): Don't create poke-settings.texi
	if the command to create it failed.
	(MOSTLYCLEANFILES): Update.

2022-01-30  Sergio Durigan Junior  <sergiodj@sergiodj.net>

	* poke/Makefile.am (dist_pkgdata_DATA): Always install
	pk-hserver.pk.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Really restore proper behavior with
	-l and unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/poke.c (parse_args_2): Restore proper behavior with -l and
	unhandled exceptions.

2022-01-29  Jose E. Marchesi  <jemarch@gnu.org>

	* poke/pk-cmd.h: Prototype for pk_cmd_completion_function.