@@ -1,5 +1,15 @@
 2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* configure.ac: Do not use PKG_CHECK_MODULES to check for
+	libraries.
+	* libpoke/Makefile.am: Adapt accordingly.
+	* poke/Makefile.am: Likewise.
+	* testsuite/poke.mi-json/Makefile.am (mi_json_LDADD): Likewise.
+	* poke/pk-mi-json.c: Include json-c/json.h instead of json.h.
+	* testsuite/poke.mi-json/mi-json.c: Likewise.
+
+2022-02-01  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* configure.ac: Define the Automake conditional CROSS_COMPILING.
 	* doc/Makefile.am (poke-settings.texi): Rule to use when
 	cross-compiling.
